--- a/frontendTFM/src/app/elementos/elementos.component.html
+++ b/frontendTFM/src/app/elementos/elementos.component.html
@@ -1,23 +1,25 @@
-<h1 class="text-center">Elementos</h1>
-<div class="card">
-   <div *ngIf="this.usuarioDatos.rejilla.elementosrejilla" class="card-body">
-      <form name="form" #f="ngForm" novalidate (ngSubmit)="guardar()">
-         <div class="form-group" *ngFor='let num of [2,3,4,5,6,7,8,9,10]'>
-            <label for="'elemento'+num">{{this.usuarioDatos?.rejilla?.elementos[num]?.descripcion}} </label>
-            <input type="text" class="form-control" name="elemento+{{num}}"
-               [(ngModel)]="this.usuarioDatos.rejilla.elementosrejilla[num].nombreelemento" autocomplete="off" required>
-            <label for="'descripcion'+num">Descripción:</label>
-            <input type="text" class="form-control" name="descripcion+{{num}}"
-               [(ngModel)]="this.usuarioDatos.rejilla.elementosrejilla[num].rolelemento" autocomplete="off">
-         </div>
-
-         <div class="form-group">
-            <button #boton [autofocus]="boton.focus()" type="submit" class="btn btn-dark" [disabled]="!f.valid">Guardar
-               elementos</button>
-            <div *ngIf="f.submitted" class="alert alert-danger mt-3">Debe de introducir todos los
-               elementos
+<div *ngIf="bElementosIniciados">
+   <h1 class="text-center">Elementos</h1>
+   <div class="card">
+      <div *ngIf="this.usuarioDatos.rejilla.elementosrejilla" class="card-body">
+         <form name="form" #f="ngForm" novalidate (ngSubmit)="guardar()">
+            <div class="form-group" *ngFor='let num of [2,3,4,5,6,7,8,9,10]'>
+               <label for="'elemento'+num">{{this.usuarioDatos?.rejilla?.elementos[num]?.descripcion}} </label>
+               <input type="text" class="form-control" name="elemento+{{num}}"
+                  [(ngModel)]="this.usuarioDatos.rejilla.elementosrejilla[num].nombreelemento" autocomplete="off"
+                  required>
+               <label for="'descripcion'+num">Descripción:</label>
+               <input type="text" class="form-control" name="descripcion+{{num}}"
+                  [(ngModel)]="this.usuarioDatos.rejilla.elementosrejilla[num].rolelemento" autocomplete="off">
             </div>
-         </div>
-      </form>
+
+            <div class="form-group">
+               <button #boton type="submit" class="btn btn-dark" [disabled]="!f.valid">Guardar elementos</button>
+               <div *ngIf="f.submitted" class="alert alert-danger mt-3">Debe de introducir todos los
+                  elementos
+               </div>
+            </div>
+         </form>
+      </div>
    </div>
 </div>
